#2 - Add HttpApi for obtaining client implementations of an interface